--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -14,7 +14,8 @@
 
 
     /* Font */
-    --font-size: 18px;
+    font-size: 18px;
+    --font-size: 1rem;
 
     --font-normal: 300;
     --font-semi-bold: 400;
@@ -35,19 +36,24 @@ button{
     cursor: pointer;
 }
 
-html{
-    scroll-behavior: smooth;
+@media (prefers-reduced-motion: no-preference)
+{
+    html{
+        scroll-behavior: smooth;
+    }
 }
 
 body{
     background-color: var(--main-bg);
 }
 
-.section{
+main{
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
 }
-
-
 
 .sec_container{
     background-color: var(--card-bg);
@@ -56,7 +62,6 @@ body{
     grid-template-columns: 1fr max-content;
     column-gap: 3rem;
     max-width: 42.667rem;
-    margin-top: 5rem;
     margin-left: 1.5rem;
     margin-right: 1.5rem;
 }
@@ -72,7 +77,8 @@ body{
 
 .image img{
     margin: 1rem 0 1rem 0;
-    width: 90%;
+
+    width: 15.556rem;
     border-radius: 10px;
     margin-bottom: 2rem;
 }
@@ -83,7 +89,7 @@ body{
     align-items: center;
     position: absolute;
 
-    width: 90%;
+    width: 15.556rem;
     height: 85%;
     border-radius: 10px;
     
@@ -118,13 +124,13 @@ body{
 .data{
     padding: 0 1rem 0 1rem;
     color: var(--prim-blue);
-    font-size: 18px;
+    font-size: 1rem;
     margin-bottom: 1.5rem;
-    line-height: 1.5em;
+    line-height: 1.5;
 }
 
 .data h1{
-    font-size: 22px;
+    font-size: 1.222rem;
     font-weight: var(--font-bold);
     color: var(--clr-white);
     margin-bottom: 1rem;
@@ -152,7 +158,7 @@ body{
 
 .price p{
     color: var(--prim-cyan);
-    font-size: 18px;
+    font-size: 1rem;
     margin: 0;
     padding-left: 5px;
     font-weight: var(--font-semi-bold);
@@ -160,12 +166,17 @@ body{
 
 .time-left p{
     color: var(--prim-blue);
-    font-size: 18px;
+    font-size: 1rem;
 }
 
 .time-left img{
-    width: auto;
-    height: auto;
+    width: 1.3rem;
+    height: 1.3rem;
+}
+
+.price img{
+    width: 0.8rem;
+    height: 1.3rem;
 }
 
 .seperator {
@@ -183,12 +194,12 @@ body{
 
 .author p{
     color: var(--prim-blue);
-    font-size: 18px;
+    font-size: 1rem;
 }
 
 .author img{
-    width: 10%;
-    height: 10%;
+    width: 2.222rem;
+    height: 2.222rem;
     margin-right: 0.75em;
     border-radius: 100%;
     border: 1px solid var(--clr-white);
@@ -207,26 +218,4 @@ body{
 a:hover{
     color: var(--prim-cyan);
     cursor: pointer;
-}
-
-@media screen and (min-width: 1024px)
-{
-    .section{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    
-    .data,
-    .infos,
-    .author{
-        padding-left: 2rem;
-        padding-right: 2rem;
-    }
-
-    .seperator{
-        margin-left: 2rem;
-        max-width: 90%;
-    }
-
 }
