--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -61,9 +61,10 @@ main{
     padding: 1rem 1rem;
     grid-template-columns: 1fr max-content;
     column-gap: 3rem;
-    max-width: 42.667rem;
     margin-left: 1.5rem;
     margin-right: 1.5rem;
+
+    max-width: 20rem;
 }
 
 
@@ -160,7 +161,7 @@ main{
     color: var(--prim-cyan);
     font-size: 1rem;
     margin: 0;
-    padding-left: 5px;
+    padding-left: 0.278rem;
     font-weight: var(--font-semi-bold);
 }
 
@@ -200,7 +201,7 @@ main{
 .author img{
     width: 2.222rem;
     height: 2.222rem;
-    margin-right: 0.75em;
+    margin-right: 0.75rem;
     border-radius: 100%;
     border: 1px solid var(--clr-white);
 }
@@ -218,4 +219,21 @@ main{
 a:hover{
     color: var(--prim-cyan);
     cursor: pointer;
+}
+
+
+.attribution { 
+    font-size: 0.8rem; 
+    text-align: center; 
+    position: absolute;
+    bottom: 0;
+    margin-top: 0;
+    margin-bottom: 3.667rem;
+    width: 100%;
+    color: var(--clr-white);
+    padding-right: 1.5rem;
+}
+
+.attribution a{
+    color: var(--prim-cyan);
 }
