--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -58,11 +58,13 @@ main{
 .sec_container{
     background-color: var(--card-bg);
     border-radius: 1rem;
-    padding: 1rem 0.8rem;
+    /* padding: 1rem 0.8rem; */
+    padding: 1.5rem;
     grid-template-columns: 1fr max-content;
     column-gap: 3rem;
-    margin-left: 1.5rem;
-    margin-right: 1.5rem;
+    /* margin-left: 1.5rem;
+    margin-right: 1.5rem; */
+    margin: 0 1.5rem;
 
     max-width: 20rem;
 }
@@ -77,9 +79,11 @@ main{
 }
 
 .image img{
-    margin: 1rem 0 1rem 0;
+    /* margin: 1rem 0 1rem 0;
+    width: 16.556rem; */
 
-    width: 16.556rem;
+    width: 100%;
+
     border-radius: 10px;
     margin-bottom: 2rem;
 }
@@ -90,8 +94,12 @@ main{
     align-items: center;
     position: absolute;
 
-    width: 15.556rem;
-    height: 85%;
+    /* width: 15.556rem;
+    height: 85%; */
+
+    width: 100%;
+    height: 90%;
+    top: 0;
     border-radius: 10px;
     
     transition: .5s ease;
@@ -123,7 +131,7 @@ main{
 
 /* Data */
 .data{
-    padding: 0 1rem 0 1rem;
+    /* padding: 0 1rem 0 1rem; */
     color: var(--prim-blue);
     font-size: 1rem;
     margin-bottom: 1.5rem;
@@ -140,7 +148,7 @@ main{
 
 /* Infos */
 .infos{
-    padding: 0 1rem 0 1rem;
+    /* padding: 0 1rem 0 1rem; */
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -189,8 +197,7 @@ main{
 .author{
     display: flex;
     align-items: center;
-    padding: 1em 0;
-    padding-left: 1rem;
+    padding: 1rem 0;
 }
 
 .author p{
